[package]
name = "copyvios"
version = "0.1.0"
authors = ["Ben Kurtovic <ben@benkurtovic.com>"]
license = "MIT"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3"
axum = "0.6"
mwapi = "0.6.0"
mwapi_responses = "0.4.2"
mwbot = "0.6.1"
parsoid = "0.8.0"
rand = "0.8.5"
thiserror = "1.0.56"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
