[project]
name = "copyvios"
version = "1.0.dev0"
authors = [
    {name = "Ben Kurtovic", email = "ben@benkurtovic.com"},
]
description = "A copyright violation detector web tool for Wikipedia articles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "earwigbot[sql,copyvios] >= 0.4",
    "mwparserfromhell >= 0.6",
    "flask >= 3.0",
    "flask-mako >= 0.4",
    "mako >= 1.3.5",
    "requests >= 2.32.3",
    "SQLAlchemy >= 2.0.32",
    "apsw >= 3.46.1",
]

[project.urls]
Homepage = "https://github.com/earwig/copyvios"
Issues = "https://github.com/earwig/copyvios/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.11"
exclude = [
    # TODO
    "src/copyvios/*",
    "app.py",
]
venvPath = "."
venv = "venv"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["F403"]
