[project]
name = "copyvios"
version = "1.0.dev0"
authors = [
    {name = "Ben Kurtovic", email = "ben@benkurtovic.com"},
]
description = "A copyright violation detector web tool for Wikipedia articles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "earwigbot[sql,copyvios] >= 0.4",
    "mwparserfromhell >= 0.7",
    "flask >= 3.0",
    "requests >= 2.32.3",
    "pydantic >= 2.9.2",
    "SQLAlchemy >= 2.0.32",
    "mwoauth >= 0.4.0",
    "toolforge_i18n[Flask] >= 0.1",
]

[project.urls]
Homepage = "https://github.com/earwig/copyvios"
Issues = "https://github.com/earwig/copyvios/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
